service/k3s/templates/logging-helm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  logging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventrouter
  namespace: kube-system
  labels:
    app: eventrouter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventrouter
  template:
    metadata:
      labels:
        app: eventrouter
        tier: control-plane-addons
    spec:
      containers:
        - name: kube-eventrouter
          image: gcr.io/heptio-images/eventrouter:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: config-volume
            mountPath: /etc/eventrouter
      serviceAccount: eventrouter
      volumes:
        - name: config-volume
          configMap:
            name: eventrouter-cm
---
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: logging
  labels:
    app.kubernetes.io/name: log-output
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: log-output
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: logging
  labels:
    app.kubernetes.io/name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: log-output
  template:
    metadata:
      labels:
        app.kubernetes.io/name: log-output
    spec:
      containers:
        - name: log-output
          image: "paynejacob/log-output:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 16Mi
            requests:
              memory: 8Mi
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - effect: NoSchedule
          key: cattle.io/os
          operator: Equal
          value: linux
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-proxy-headers: 'X-Forwarded-Proto: https'
    kubernetes.io/ingress.class: traefik-cert-manager
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-basic-auth@kubernetescrd
  name: log-output
  namespace: logging
spec:
  tls:
    - hosts:
      - log-output.${domain}
      secretName: log-output-tls
  rules:
    - host: log-output.${domain}
      http:
        paths:
          - backend:
              serviceName: log-output
              servicePort: 80
---
